Fixed scrollbar on timeline

--- a/frontend/src/routes/Timeline.css
+++ b/frontend/src/routes/Timeline.css
@@ -71,7 +71,7 @@
     left: 0;
     display: inline-block;
     width: 59.5%;
-    height: 80%;
+    height: calc(100vh - 165px);
     overflow-y: scroll;
     /*scrollbar-color: ;*/
     scrollbar-width: thin;
@@ -82,7 +82,7 @@
     position: absolute;
     display: inline-block;
     width: 39.3%;
-    height: 80%;
+    height: calc(100vh - 165px);
     padding: 5px;
     right: 0;
     overflow-y: scroll;
